order information done

--- a/package.json
+++ b/package.json
@@ -34,5 +34,18 @@
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.2"
-  }
+  },
+  "main": "postcss.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kamruzzaman22874/car-servicing-client.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kamruzzaman22874/car-servicing-client/issues"
+  },
+  "homepage": "https://github.com/kamruzzaman22874/car-servicing-client#readme",
+  "description": ""
 }
